Fix speakers visibility

--- a/assets/css/mobile.scss
+++ b/assets/css/mobile.scss
@@ -710,6 +710,8 @@ body {
 
 @media (max-width: 767px) {
   .hide { display: none; }
+  #hidespeaker { display: none; }
+
 }
 
 #logout {
@@ -717,3 +719,4 @@ body {
 }
 
 .hide { display: none; }
+#hidespeaker { display: none; }
